use a significantly less cursed way of changing the gc settings