@@ -9,6 +9,8 @@ targetCompatibility = JavaVersion.VERSION_17
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
+final MAX_JAVA_HEAP_SIZE_MB = 50;
+
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
 deploy {
@@ -26,7 +28,30 @@ deploy {
                 // getTargetTypeClass is a shortcut to get the class type using a string
 
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
+                    gcType = 'other'
                     jvmArgs.add("-Don.robot=true") // This won't be used in simulation
+                    jvmArgs.add("-Dcom.sun.management.jmxremote=true")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.port=1198")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.local.only=false")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.ssl=false")
+                    jvmArgs.add("-Dcom.sun.management.jmxremote.authenticate=false")
+                    jvmArgs.add("-Djava.rmi.server.hostname=10.34.76.2")
+
+                    jvmArgs.add("-XX:+UnlockExperimentalVMOptions")
+                    jvmArgs.add("-Xmx" + MAX_JAVA_HEAP_SIZE_MB + "M")
+                    jvmArgs.add("-Xms" + MAX_JAVA_HEAP_SIZE_MB + "M")
+                    // Set the minimum heap size to the maximum heap size to avoid resizing
+                    jvmArgs.add("-Djoml.fastmath=false")
+                    // Disable fast math for JOML (it causes all sorts of weird issues)
+                    jvmArgs.add("-ea") // Enable assertions
+                    jvmArgs.add("-XX:+UseG1GC")
+                    // Higher than the default 1ms, but allows for more consistent performance
+                    jvmArgs.add("-XX:MaxGCPauseMillis=4")
+                    jvmArgs.add("-XX:+AlwaysPreTouch")// Pre-touch memory pages used by the JVM during initialization
+                    jvmArgs.add("-XX:+ParallelRefProcEnabled") // Use multiple threads to clean up reference objects
+                    // Causes GC to write to file system which can cause major latency if disk IO is high -- See https://www.evanjones.ca/jvm-mmap-pause.html
+                    jvmArgs.add("-XX:+PerfDisableSharedMem")
+                    jvmArgs.add("-Xlog:gc*:logs/gc.log:time,uptime:filecount=5,filesize=1M") // Log GC events to a file
                 }
 
                 // Static files artifact
